fix the api link issues

--- a/apps/content/docs/en/api/api-documentation.mdx
+++ b/apps/content/docs/en/api/api-documentation.mdx
@@ -10,7 +10,7 @@ The Trading Time Series Forecast API is a Flask-based REST API providing access 
 The API is deployed and hosted on PythonAnywhere. You can access it via the following base URL:
 
 ```
-http://your-pythonanywhere-username.pythonanywhere.com
+https://elm19.pythonanywhere.com
 ```
 
 #### Example Request
@@ -19,7 +19,7 @@ http://your-pythonanywhere-username.pythonanywhere.com
 import requests
 
 # Make GET request to the root endpoint
-response = requests.get('http://your-pythonanywhere-username.pythonanywhere.com/')
+response = requests.get('https://elm19.pythonanywhere.com/')
 print(response.json())
 ```
 
