feat(dashboard): add dashboard link to main navigation and create new dashboard page feat(docs): enhance search functionality with keywords in navigation items

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -15,7 +15,8 @@
     "words": {
       "menu": "Menu",
       "docs": "Docs",
-      "blog": "Blog"
+      "blog": "Blog",
+      "dashboard": "Dashboard"
     },
 
     "featured_cards": {
