fix: add missing links

--- a/apps/content/docs/fr/core-concepts/backtesting.mdx
+++ b/apps/content/docs/fr/core-concepts/backtesting.mdx
@@ -72,7 +72,7 @@ class ModelSignalStrategy(bt.Strategy):
                     self.sell()
 ```
 
-> For full code implementation, see [backtesting code here](https://github.com/elm19/GoldSpot-Predictor/blob/main/notebooks/new_approach_exp1/final_backtrader.ipynb).
+> For full code implementation, see [backtesting code here](#).
 
 ---
 
