--- a/apps/content/docs/en/development/local-setup.mdx
+++ b/apps/content/docs/en/development/local-setup.mdx
@@ -9,19 +9,19 @@ description: This project is structured into **three separate repositories**, ea
 
 * Contains the **documentation site** and the **dashboard interface**.
 * It is the main entry point for users to interact with our project.
-* Link: [Main Repo](#)
+* Link: [Main Repo](https://github.com/elm19/signal-generator)
 
 ### 2. **Experimental Models Repository**
 
 * This is where our **initial prototypes** and **experimental model iterations** were developed.
 * It contains rough drafts, early ideas, and test notebooks.
-* Link: [Experimental Repo](#)
+* Link: [Experimental Repo](https://github.com/elm19/GoldSpot-Predictor)
 
 ### 3. **Backend API Repository**
 
 * Hosts the **Flask server** that serves model predictions via a REST API and the github actions that runs the model predictions.
 * It powers the backend used by the dashboard.
-* Link: [Backend Server Repo](#)
+* Link: [Backend Server Repo](https://github.com/elm19/trading-timeseries-forecast-api)
 
 ---
 
